--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "aws-amplify": "^3.0.23",
+    "aws-amplify-react": "^4.1.22",
+    "aws-sdk": "^2.736.0",
     "connected-react-router": "^6.8.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
